--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 node_js:
   - 10.16.0
+branches:
+  only:
+  - master
+install:
+  - npm install
 script: true
 after_script: cat ./coverage/lcov.info | coveralls
