--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ install:
   - npm install
 script:
   - npm test
+after_script:
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
