fix: update wc test strategy

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -13,7 +13,7 @@
     "init": "git init && git add . && git commit -m initialize && git remote add origin git@github.com:<%= repository %>.git ",
     "push": "git push -u origin master",
     "serve": "<% if (if_local_polymer_cli) { %>npx<% } %>polymer serve",
-    "test": "<% if (if_local_polymer_cli) { %>npx<% } %>polymer test -l chrome",
+    "test": "<% if (if_local_polymer_cli) { %>npx<% } %>polymer test -l chrome --skip-selenium-install",
     "build": "<% if (if_local_typescript) { %>npx<% } %>tsc && cp ./build/%npm_package_config_wc_name%.js %npm_package_config_wc_name%.js",
     "dist": "<% if (if_local_typescript) { %>npx<% } %>tsc && webpack --mode development --config webpack.config.js"
   },
